--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Index</title>
+        <title>首页</title>
     </head>
     <body>
-        Hello World!
+        你好 世界!
     </body>
 </html>
