--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>首页</title>
+        <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
         你好 世界!
